Create Blocks in twig

--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -1,3 +1,11 @@
-<h1>
-    {{ dump(title) }}
-</h1>
+{% extends "base.html.twig" %}
+
+{% block title %}
+    Movies Page
+{% endblock %}
+
+{% block body %}
+    <h1>
+        {{ title }}
+    </h1>
+{% endblock %}
