--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -5,7 +5,7 @@
 {% endblock %}
 
 {% block body %}
-    <h1>
-        {{ title }}
-    </h1>
+  {% for movie in movies %}
+    <li>{{ movie }}</li>
+  {% endfor %}
 {% endblock %}
