--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -5,7 +5,5 @@
 {% endblock %}
 
 {% block body %}
-  {% for movie in movies %}
-    <li>{{ movie }}</li>
-  {% endfor %}
+  <h1>Testing Assets</h1>
 {% endblock %}
