--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -5,5 +5,5 @@
 {% endblock %}
 
 {% block body %}
-  <h1>Testing Assets</h1>
+  <h1 class="bg-blue-500 text-2xl text-center font-bold">Testing Assets</h1>
 {% endblock %}
