--- a/templates/index.html.twig
+++ b/templates/index.html.twig
@@ -6,4 +6,6 @@
 
 {% block body %}
   <h1 class="bg-blue-500 text-2xl text-center font-bold">Testing Assets</h1>
+
+  <img src="{{ asset('build/images/hummingbird.4e66765c.jpg') }}" alt="">
 {% endblock %}
