--- a/templates/movies/index.html.twig
+++ b/templates/movies/index.html.twig
@@ -9,7 +9,7 @@
             </h1>
 
             <span class="font-light text-gray-500 italic">
-                Created by Code With Dary
+                Created by Ninjaphil
             </span>
         </div>
     </div>
@@ -39,7 +39,7 @@
                 </h2>
 
                 <span class="text-gray-500">
-                    By <span class="italic text-sm text-gray-800">Code With Dary | 28.01.2022
+                    By <span class="italic text-sm text-gray-800">Ninjaphil | 12.10.2022
                 </span>
 
                 <p class="text-base text-gray-700 pt-4 pb-10 leading-8 font-light">
