--- a/templates/movies/show.html.twig
+++ b/templates/movies/show.html.twig
@@ -9,7 +9,7 @@
         <div class="py-10 text-center">
             <div class="inline-block sm:pt-1">
                 <h2 class="font-bold">
-                    Created by: Code With Dary
+                    Created by: Ninjaphil
                 </h2>
 
                 <p class="text-sm text-gray-600">
@@ -28,7 +28,7 @@
             {{ movie.description }}
         </p>
 
-        {% if app.user and movie.userId == app.user.id %}
+        {# {% if app.user and movie.userId == app.user.id %} #}
             <a 
                 href="/movies/edit/{{ movie.id }}"
                 class="bg-green-500 font-bold py-2 px-4 rounded transition-all hover:bg-green-300">
@@ -40,6 +40,6 @@
                 class="bg-red-500 font-bold py-2 px-4 ml-6 rounded transition-all hover:bg-red-300">
                 Delete Movie
             </a>
-        {% endif %}
+        {# {% endif %} #}
     </div>
 {% endblock %}
