--- a/templates/movies/index.html.twig
+++ b/templates/movies/index.html.twig
@@ -13,8 +13,7 @@
             </span>
         </div>
     </div>
-
-    {# {% if app.user %} #}
+    {% if app.user %}
         <div class="mx-auto w-4/5 my-8">
             <a 
                 href="/movies/create" 
@@ -22,7 +21,7 @@
                 Create New movie
             </a>
         </div>
-    {# {% endif %} #}
+    {% endif %}
     
     <div class="md:grid lg:grid-cols-3 gap-20 w-4/5 mx-auto py-15 ">
         <!-- Review Item -->
