--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -19,7 +19,7 @@
                         <div class="flex items-center flex-shrink-0 text-white mr-6">
                             <a
                                     class="text-white no-underline hover:text-white hover:no-underline"
-                                    href="/">
+                                    href="/movies">
             <span class="text-2xl pl-2 font-extrabold">
                 Movies
             </span>
@@ -62,7 +62,7 @@
                                 <li class="mr-3">
                                     <a
                                             class="inline-block text-gray-300 no-underline hover:text-gray-200 hover:text-underline py-2 px-4"
-                                            href="/"
+                                            href="/movies"
                                             @click="isOpen = false">
                                         Home
                                     </a>
@@ -92,6 +92,15 @@
                                         href="/{{app.user ? 'logout' : 'login'}}"
                                         @click="isOpen = false">
                                         {{ app.user ? 'Logout' : 'Login' }}
+                                    </a>
+                                </li>                                
+
+                                <li class="mr-3">
+                                    <a
+                                        class="inline-block text-gray-300 no-underline hover:text-gray-200 hover:text-underline py-2 px-4"
+                                        href="/{{app.user ? 'logout' : 'register'}}"
+                                        @click="isOpen = false">
+                                        {{ app.user ? '' : 'Register' }}
                                     </a>
                                 </li>                                
                             </ul>
