--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -68,7 +68,7 @@
                                     </a>
                                 </li>
 
-                                <li class="mr-3">
+                                {#<li class="mr-3">
                                     <a
                                             class="inline-block text-gray-300 no-underline hover:text-gray-200 hover:text-underline py-2 px-4"
                                             href="/movies"
@@ -77,14 +77,14 @@
                                     </a>
                                 </li>
 
-                                <li class="mr-3">
+                                 <li class="mr-3">
                                     <a
                                             class="inline-block text-gray-300 no-underline hover:text-gray-200 hover:text-underline py-2 px-4"
                                             href="/contact"
                                             @click="isOpen = false">
                                         Contact
                                     </a>
-                                </li>
+                                </li> #}
 
                                 <li class="mr-3">
                                     <a
