--- a/templates/movies/index.html.twig
+++ b/templates/movies/index.html.twig
@@ -8,11 +8,12 @@
                 ({{ movies|length }})
             </h1>
 
-            <span class="font-light text-gray-500 italic">
-                Created by Ninjaphil
-            </span>
+            {# <span class="font-light text-gray-500 italic">
+                Created by Ninjaphil 
+            </span> #}
         </div>
     </div>
+    
     {% if app.user %}
         <div class="mx-auto w-4/5 my-8">
             <a 
@@ -36,17 +37,17 @@
                 <h2 class="text-gray-700 font-bold text-3xl py-2">
                     {{ movie.title }}
                 </h2>
+<br> <br>
+                {# <span class="text-gray-500">
+                    By <span class="italic text-sm text-gray-800">{{ app.user.email }}
+                </span> #}
 
-                <span class="text-gray-500">
-                    By <span class="italic text-sm text-gray-800">Ninjaphil | 12.10.2022
-                </span>
-
-                <p class="text-base text-gray-700 pt-4 pb-10 leading-8 font-light">
+                {# <p class="text-base text-gray-700 pt-4 pb-10 leading-8 font-light">
                     {{ movie.description }}
-                </p>
+                </p> #}
 
                 <a href="/movies/{{ movie.id }}" class="uppercase border border-gray-500 text-gray-600 text-lg py-4 px-12 rounded transition transition-all hover:bg-gray-800 hover:text-white">
-                    Keep Reading
+                    Read More
                 </a>
             </div>
         {% endfor %}
