--- a/templates/movies/show.html.twig
+++ b/templates/movies/show.html.twig
@@ -8,13 +8,13 @@
 
         <div class="py-10 text-center">
             <div class="inline-block sm:pt-1">
-                <h2 class="font-bold">
+                {# <h2 class="font-bold">
                     Created by: Ninjaphil
                 </h2>
 
                 <p class="text-sm text-gray-600">
                     28-01-2022 4 min. read
-                </p>
+                </p> #}
             </div>
         </div>
 
@@ -28,7 +28,8 @@
             {{ movie.description }}
         </p>
 
-        {% if app.user and movie.userId == app.user.id %}
+        {% if app.user %}
+        {# and movie.userId == app.user.id  #}
             <a 
                 href="/movies/edit/{{ movie.id }}"
                 class="bg-green-500 font-bold py-2 px-4 rounded transition-all hover:bg-green-300">
